--- a/Menu1.html
+++ b/Menu1.html
@@ -8,6 +8,13 @@
 		<title>Menu - La palette du goût</title>
 	</head>
 	<body class="restaurant">
+
+		<!--Progress bar-->
+		<div class="loader">
+			<div class="loader__spinner">
+			</div>
+		</div>
+		
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -32,7 +39,7 @@
 				<h4 class="menu__subtitle">Entrées</h4>
 				<div class="menu__green-line"></div>
 			
-				<div class="choice">
+				<div class="choice choice--1">
 					<div class="choice__description">
 						<h5 class="choice__heading">Fricassée d'escargot</h5>
 						<p class="choice__side">Au piment d'Espelette</p>
@@ -43,7 +50,7 @@
 					</button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--2">
 					<div class="choice__description">
 						<h5 class="choice__heading">Foie gras de canard mi-cuit</h5>
 						<p class="choice__side">Et ses copeaux de truffe noire</p>
@@ -52,7 +59,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--3">
 					<div class="choice__description">
 						<h5 class="choice__heading">Oeuf au plat</h5>
 						<p class="choice__side">Assaisonné à la truffe sur lit de caviar</p>
@@ -66,7 +73,7 @@
 				<h4 class="menu__subtitle">Plats</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--4">
 					<div class="choice__description">
 						<h5 class="choice__heading">Filet de boeuf aux herbes</h5>
 						<p class="choice__side">Accompagné de sa ribambelle de légumes</p>
@@ -75,7 +82,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--5">
 					<div class="choice__description">
 						<h5 class="choice__heading">Parmentier de queue de boeuf</h5>
 						<p class="choice__side">À la truffe noire sur sa purée de panais</p>
@@ -84,7 +91,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--6">
 					<div class="choice__description">
 						<h5 class="choice__heading">Filet de turbot</h5>
 						<p class="choice__side">Aux agrumes</p>
@@ -98,7 +105,7 @@
 				<h4 class="menu__subtitle">Desserts</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--7">
 					<div class="choice__description">
 						<h5 class="choice__heading">Paris-Brest</h5>
 						<p class="choice__side">Revisité</p>
@@ -107,7 +114,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--8">
 					<div class="choice__description">
 						<h5 class="choice__heading">Macaron au chocolat d'exception</h5>
 						<p class="choice__side">Et glace à la vanille de Madagascar</p>
@@ -116,7 +123,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--9">
 					<div class="choice__description">
 						<h5 class="choice__heading">Mousse au chocolat</h5>
 						<p class="choice__side">Au piment d'Espelette et à la truffe noire</p>
