--- a/Menu2.html
+++ b/Menu2.html
@@ -8,6 +8,13 @@
 		<title>Menu - La palette du goût</title>
 	</head>
 	<body class="restaurant">
+		
+		<!--Progress bar-->
+		<div class="loader">
+			<div class="loader__spinner">
+			</div>
+		</div>
+
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -31,7 +38,7 @@
 				<h4 class="menu__subtitle">Entrées</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--1">
 					<div class="choice__description">
 						<h5 class="choice__heading">Ravioles de foie gras</h5>
 						<p class="choice__side">Accompagnés de leur crème à la truffe</p>
@@ -40,7 +47,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--2">
 					<div class="choice__description">
 						<h5 class="choice__heading">Caviar osciètre</h5>
 						<p class="choice__side">Sur blini à la farine de blé noir</p>
@@ -49,7 +56,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--3">
 					<div class="choice__description">
 						<h5 class="choice__heading">Homard et espuma de potiron</h5>
 						<p class="choice__side">Mariné aux zestes d'orange</p>
@@ -58,7 +65,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--4">
 					<div class="choice__description">
 						<h5 class="choice__heading">Foie gras de canard cuit entier</h5>
 						<p class="choice__side">Confiture de figue et pain toasté</p>
@@ -72,7 +79,7 @@
 				<h4 class="menu__subtitle">Plats</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--5">
 					<div class="choice__description">
 						<h5 class="choice__heading">Noix de coquilles Saint-Jacques</h5>
 						<p class="choice__side">Sur lit de purée de céleri-rave</p>
@@ -81,7 +88,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--6">
 					<div class="choice__description">
 						<h5 class="choice__heading">Langoustine poêlée</h5>
 						<p class="choice__side">Purée de patate douce</p>
@@ -90,7 +97,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--7">
 					<div class="choice__description">
 						<h5 class="choice__heading">Mijoté de queue de boeuf</h5>
 						<p class="choice__side">Et riz sauvage aux zestes de citron</p>
@@ -104,7 +111,7 @@
 				<h4 class="menu__subtitle">Desserts</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--8">
 					<div class="choice__description">
 						<h5 class="choice__heading">Macaron noisette et chocolat</h5>
 						<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
@@ -113,7 +120,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--9">
 					<div class="choice__description">
 						<h5 class="choice__heading">Baba au rhum revisité</h5>
 						<p class="choice__side">Avec son coulis de citron</p>
@@ -122,7 +129,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--10">
 					<div class="choice__description">
 						<h5 class="choice__heading">Tarte au citron meringuée </h5>
 						<p class="choice__side">Déstructurée</p>
