--- a/Menu4.html
+++ b/Menu4.html
@@ -8,6 +8,13 @@
 		<title>Menu - La palette du goût</title>
 	</head>
 	<body class="restaurant">
+
+		<!--Progress bar-->
+		<div class="loader">
+			<div class="loader__spinner">
+			</div>
+		</div>
+		
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -32,7 +39,7 @@
 				<h4 class="menu__subtitle">Entrées</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--1">
 					<div class="choice__description">
 						<h5 class="choice__heading">Tartare de thon</h5>
 						<p class="choice__side">Assaisonné au yuzu</p>
@@ -41,7 +48,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--2">
 					<div class="choice__description">
 						<h5 class="choice__heading">Bouchée de homard croustillant</h5>
 						<p class="choice__side">Et sa farandole de petits légumes</p>
@@ -50,7 +57,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--3">
 					<div class="choice__description">
 						<h5 class="choice__heading">Velouté de cèpes</h5>
 						<p class="choice__side">Aux truffes</p>
@@ -64,7 +71,7 @@
 				<h4 class="menu__subtitle">Plats</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--4">
 					<div class="choice__description">
 						<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
 						<p class="choice__side">Et sa crème de truffe</p>
@@ -73,7 +80,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--5">
 					<div class="choice__description">
 						<h5 class="choice__heading">Langouste rôtie </h5>
 						<p class="choice__side">Et ses légumes de saison</p>
@@ -82,7 +89,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--6">
 					<div class="choice__description">
 						<h5 class="choice__heading">Côte de boeuf Angus</h5>
 						<p class="choice__side">Et sa purée de panais</p>
@@ -96,7 +103,7 @@
 				<h4 class="menu__subtitle">Desserts</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--7">
 					<div class="choice__description">
 						<h5 class="choice__heading">Farandole de desserts</h5>
 						<p class="choice__side">Du chef</p>
@@ -105,7 +112,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--8">
 					<div class="choice__description">
 						<h5 class="choice__heading">Crème brulée</h5>
 						<p class="choice__side">Revisitée</p>
@@ -114,7 +121,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--9">
 					<div class="choice__description">
 						<h5 class="choice__heading">Tiramisu</h5>
 						<p class="choice__side">À la noisette</p>
