--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		<title>Ohmyfood!</title>
 	</head>
 	<body>
+		<!--Progress bar-->
+		<div class="loader">
+			<div class="loader__spinner">
+			</div>
+		</div>
 		<!--Header-->
 		<header class="header">
 			<div class="header__logo">
