--- a/Menu3.html
+++ b/Menu3.html
@@ -8,6 +8,13 @@
 		<title>Menu - La palette du goût</title>
 	</head>
 	<body class="restaurant">
+
+		<!--Progress bar-->
+		<div class="loader">
+			<div class="loader__spinner">
+			</div>
+		</div>
+		
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -32,7 +39,7 @@
 				<h4 class="menu__subtitle">Entrées</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--1">
 					<div class="choice__description">
 						<h5 class="choice__heading">Tartare de poulpe acidulé</h5>
 						<p class="choice__side">Aux zestes d'orange</p>
@@ -41,7 +48,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--2">
 					<div class="choice__description">
 						<h5 class="choice__heading">Velouté de légumes d'antan</h5>
 						<p class="choice__side">Carotte, panais, topinambour</p>
@@ -50,7 +57,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--3">
 					<div class="choice__description">
 						<h5 class="choice__heading">Soupe à l'oignon</h5>
 						<p class="choice__side">Revisitée</p>
@@ -64,7 +71,7 @@
 				<h4 class="menu__subtitle">Plats</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--4">
 					<div class="choice__description">
 						<h5 class="choice__heading">Coquilles Saint-Jacques</h5>
 						<p class="choice__side">Accompagnées d'une purée de panais</p>
@@ -73,7 +80,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--5">
 					<div class="choice__description">
 						<h5 class="choice__heading">Magret de canard</h5>
 						<p class="choice__side">Et parmentier de pommes de terre</p>
@@ -82,7 +89,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--6">
 					<div class="choice__description">
 						<h5 class="choice__heading">Pigeonneau d’Ille-et-Vilaine</h5>
 						<p class="choice__side">Sur son lit de gnocchis aux légumes</p>
@@ -96,7 +103,7 @@
 				<h4 class="menu__subtitle">Desserts</h4>
 				<div class="menu__green-line"></div>
 
-				<div class="choice">
+				<div class="choice choice--7">
 					<div class="choice__description">
 						<h5 class="choice__heading">Pétales de violettes glacés</h5>
 						<p class="choice__side">Et purée de noisettes</p>
@@ -105,7 +112,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--8">
 					<div class="choice__description">
 						<h5 class="choice__heading">Fondant au chocolat</h5>
 						<p class="choice__side">Revisité</p>
@@ -114,7 +121,7 @@
 					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div class="choice">
+				<div class="choice choice--9">
 					<div class="choice__description">
 						<h5 class="choice__heading">Millefeuille croustillant</h5>
 						<p class="choice__side">Myrtilles et pâte d’amande</p>
