--- a/Menu1.html
+++ b/Menu1.html
@@ -14,7 +14,7 @@
 			<div class="loader__spinner">
 			</div>
 		</div>
-		
+
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -22,118 +22,120 @@
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
-		
-		<div class="image">
-			<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
-		</div>
 
 		<!--Section: Find a restaurant-->
-		<section class="menu">
+		<section>
 
-			<div class="menu__restaurant">
-				<h1 class="menu__heading">La palette du goût</h1>
-				<button class="menu__like"><i class="far fa-heart"></i></button>
+			<div class="image">
+				<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
 			</div>
 
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Entrées</h4>
-				<div class="menu__green-line"></div>
-			
-				<div class="choice choice--1">
-					<div class="choice__description">
-						<h5 class="choice__heading">Fricassée d'escargot</h5>
-						<p class="choice__side">Au piment d'Espelette</p>
-						<p class="choice__price">25€</p>
-					</div>
-					<button class="choice__select">
-						<i class="fas fa-check-circle"></i>
-					</button>
+			<div class="menu">
+				<div class="menu__restaurant">
+					<h1 class="menu__heading">La palette du goût</h1>
+					<button class="menu__like"><i class="far fa-heart"><i class="fas fa-heart menu__full-like"></i></i></button>
 				</div>
 
-				<div class="choice choice--2">
-					<div class="choice__description">
-						<h5 class="choice__heading">Foie gras de canard mi-cuit</h5>
-						<p class="choice__side">Et ses copeaux de truffe noire</p>
-						<p class="choice__price">35€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Entrées</h4>
+					<div class="menu__green-line"></div>
+				
+					<div class="choice choice--1">
+						<div class="choice__description">
+							<h5 class="choice__heading">Fricassée d'escargot</h5>
+							<p class="choice__side">Au piment d'Espelette</p>
+							<p class="choice__price">25€</p>
+						</div>
+						<button class="choice__select">
+							<i class="fas fa-check-circle"></i>
+						</button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--2">
+						<div class="choice__description">
+							<h5 class="choice__heading">Foie gras de canard mi-cuit</h5>
+							<p class="choice__side">Et ses copeaux de truffe noire</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--3">
+						<div class="choice__description">
+							<h5 class="choice__heading">Oeuf au plat</h5>
+							<p class="choice__side">Assaisonné à la truffe sur lit de caviar</p>
+							<p class="choice__price">20€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
 
-				<div class="choice choice--3">
-					<div class="choice__description">
-						<h5 class="choice__heading">Oeuf au plat</h5>
-						<p class="choice__side">Assaisonné à la truffe sur lit de caviar</p>
-						<p class="choice__price">20€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Plats</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--4">
+						<div class="choice__description">
+							<h5 class="choice__heading">Filet de boeuf aux herbes</h5>
+							<p class="choice__side">Accompagné de sa ribambelle de légumes</p>
+							<p class="choice__price">40€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--5">
+						<div class="choice__description">
+							<h5 class="choice__heading">Parmentier de queue de boeuf</h5>
+							<p class="choice__side">À la truffe noire sur sa purée de panais</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--6">
+						<div class="choice__description">
+							<h5 class="choice__heading">Filet de turbot</h5>
+							<p class="choice__side">Aux agrumes</p>
+							<p class="choice__price">44€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
+
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Desserts</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--7">
+						<div class="choice__description">
+							<h5 class="choice__heading">Paris-Brest</h5>
+							<p class="choice__side">Revisité</p>
+							<p class="choice__price">18€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--8">
+						<div class="choice__description">
+							<h5 class="choice__heading">Macaron au chocolat d'exception</h5>
+							<p class="choice__side">Et glace à la vanille de Madagascar</p>
+							<p class="choice__price">22€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--9">
+						<div class="choice__description">
+							<h5 class="choice__heading">Mousse au chocolat</h5>
+							<p class="choice__side">Au piment d'Espelette et à la truffe noire</p>
+							<p class="choice__price">23€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+				</div>
+				
+				<button class="menu__command">Commander</button>
 			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Plats</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--4">
-					<div class="choice__description">
-						<h5 class="choice__heading">Filet de boeuf aux herbes</h5>
-						<p class="choice__side">Accompagné de sa ribambelle de légumes</p>
-						<p class="choice__price">40€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--5">
-					<div class="choice__description">
-						<h5 class="choice__heading">Parmentier de queue de boeuf</h5>
-						<p class="choice__side">À la truffe noire sur sa purée de panais</p>
-						<p class="choice__price">35€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--6">
-					<div class="choice__description">
-						<h5 class="choice__heading">Filet de turbot</h5>
-						<p class="choice__side">Aux agrumes</p>
-						<p class="choice__price">44€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Desserts</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--7">
-					<div class="choice__description">
-						<h5 class="choice__heading">Paris-Brest</h5>
-						<p class="choice__side">Revisité</p>
-						<p class="choice__price">18€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--8">
-					<div class="choice__description">
-						<h5 class="choice__heading">Macaron au chocolat d'exception</h5>
-						<p class="choice__side">Et glace à la vanille de Madagascar</p>
-						<p class="choice__price">22€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--9">
-					<div class="choice__description">
-						<h5 class="choice__heading">Mousse au chocolat</h5>
-						<p class="choice__side">Au piment d'Espelette et à la truffe noire</p>
-						<p class="choice__price">23€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-			
-			<button class="menu__command">Commander</button>
 
 		</section>
 
