--- a/Menu4.html
+++ b/Menu4.html
@@ -14,7 +14,7 @@
 			<div class="loader__spinner">
 			</div>
 		</div>
-		
+
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -22,116 +22,118 @@
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
-
-		<div class="image">
-			<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
-		</div>
 		
 		<!--Section: Find a restaurant-->
-		<section class="menu">
+		<section>
 
-			<div class="menu__restaurant">
-				<h1 class="menu__heading">Le délice des sens</h1>
-				<button class="menu__like"><i class="far fa-heart"></i></button>
+			<div class="image">
+				<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
 			</div>
 
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Entrées</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--1">
-					<div class="choice__description">
-						<h5 class="choice__heading">Tartare de thon</h5>
-						<p class="choice__side">Assaisonné au yuzu</p>
-						<p class="choice__price">25€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="menu">
+				<div class="menu__restaurant">
+					<h1 class="menu__heading">Le délice des sens</h1>
+					<button class="menu__like"><i class="far fa-heart"><i class="fas fa-heart menu__full-like"></i></i></button>
 				</div>
 
-				<div class="choice choice--2">
-					<div class="choice__description">
-						<h5 class="choice__heading">Bouchée de homard croustillant</h5>
-						<p class="choice__side">Et sa farandole de petits légumes</p>
-						<p class="choice__price">35€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Entrées</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--1">
+						<div class="choice__description">
+							<h5 class="choice__heading">Tartare de thon</h5>
+							<p class="choice__side">Assaisonné au yuzu</p>
+							<p class="choice__price">25€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--2">
+						<div class="choice__description">
+							<h5 class="choice__heading">Bouchée de homard croustillant</h5>
+							<p class="choice__side">Et sa farandole de petits légumes</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--3">
+						<div class="choice__description">
+							<h5 class="choice__heading">Velouté de cèpes</h5>
+							<p class="choice__side">Aux truffes</p>
+							<p class="choice__price">20€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
 
-				<div class="choice choice--3">
-					<div class="choice__description">
-						<h5 class="choice__heading">Velouté de cèpes</h5>
-						<p class="choice__side">Aux truffes</p>
-						<p class="choice__price">20€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Plats</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--4">
+						<div class="choice__description">
+							<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
+							<p class="choice__side">Et sa crème de truffe</p>
+							<p class="choice__price">40€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--5">
+						<div class="choice__description">
+							<h5 class="choice__heading">Langouste rôtie </h5>
+							<p class="choice__side">Et ses légumes de saison</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--6">
+						<div class="choice__description">
+							<h5 class="choice__heading">Côte de boeuf Angus</h5>
+							<p class="choice__side">Et sa purée de panais</p>
+							<p class="choice__price">44€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
+
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Desserts</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--7">
+						<div class="choice__description">
+							<h5 class="choice__heading">Farandole de desserts</h5>
+							<p class="choice__side">Du chef</p>
+							<p class="choice__price">18€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--8">
+						<div class="choice__description">
+							<h5 class="choice__heading">Crème brulée</h5>
+							<p class="choice__side">Revisitée</p>
+							<p class="choice__price">22€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--9">
+						<div class="choice__description">
+							<h5 class="choice__heading">Tiramisu</h5>
+							<p class="choice__side">À la noisette</p>
+							<p class="choice__price">23€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+				</div>
+				
+				<button class="menu__command">Commander</button>
 			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Plats</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--4">
-					<div class="choice__description">
-						<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
-						<p class="choice__side">Et sa crème de truffe</p>
-						<p class="choice__price">40€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--5">
-					<div class="choice__description">
-						<h5 class="choice__heading">Langouste rôtie </h5>
-						<p class="choice__side">Et ses légumes de saison</p>
-						<p class="choice__price">35€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--6">
-					<div class="choice__description">
-						<h5 class="choice__heading">Côte de boeuf Angus</h5>
-						<p class="choice__side">Et sa purée de panais</p>
-						<p class="choice__price">44€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Desserts</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--7">
-					<div class="choice__description">
-						<h5 class="choice__heading">Farandole de desserts</h5>
-						<p class="choice__side">Du chef</p>
-						<p class="choice__price">18€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--8">
-					<div class="choice__description">
-						<h5 class="choice__heading">Crème brulée</h5>
-						<p class="choice__side">Revisitée</p>
-						<p class="choice__price">22€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--9">
-					<div class="choice__description">
-						<h5 class="choice__heading">Tiramisu</h5>
-						<p class="choice__side">À la noisette</p>
-						<p class="choice__price">23€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-			
-			<button class="menu__command">Commander</button>
 
 		</section>
 
