--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 					<figcaption>
 						<h3 class="restaurant__heading">La palette du goût</h3>
 						<p class="restaurant__location">Ménilmontant</p>
-						<i class="far fa-heart restaurant__like"></i>
+						<i class="far fa-heart restaurant__like">
+							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
+						</i>
 					</figcaption>
 				</figure>
 			</a>
@@ -77,7 +79,9 @@
 					<figcaption>
 						<h3 class="restaurant__heading">La note enchantée</h3>
 						<p class="restaurant__location">Charonne</p>
-						<i class="far fa-heart restaurant__like"></i>
+						<i class="far fa-heart restaurant__like">
+							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
+						</i>
 					</figcaption>
 				</figure>
 			</a>
@@ -88,7 +92,9 @@
 					<figcaption>
 						<h3 class="restaurant__heading">À la française</h3>
 						<p class="restaurant__location">Cité Rouge</p>
-						<i class="far fa-heart restaurant__like"></i>
+						<i class="far fa-heart restaurant__like">
+							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
+						</i>
 					</figcaption>
 				</figure>
 			</a>
@@ -99,7 +105,9 @@
 					<figcaption>
 						<h3 class="restaurant__heading">Le délices des sens</h3>
 						<p class="restaurant__location">Folie-Méricourt</p>
-						<i class="far fa-heart restaurant__like"></i>
+						<i class="far fa-heart restaurant__like">
+							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
+						</i>
 					</figcaption>
 				</figure>
 			</a>
