--- a/Menu3.html
+++ b/Menu3.html
@@ -14,7 +14,7 @@
 			<div class="loader__spinner">
 			</div>
 		</div>
-		
+
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -22,116 +22,118 @@
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
-
-		<div class="image">
-			<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
-		</div>
 		
 		<!--Section: Find a restaurant-->
-		<section class="menu">
+		<section>
 
-			<div class="menu__restaurant">
-				<h1 class="menu__heading">À la française</h1>
-				<button class="menu__like"><i class="far fa-heart"></i></button>
+			<div class="image">
+				<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
 			</div>
 
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Entrées</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--1">
-					<div class="choice__description">
-						<h5 class="choice__heading">Tartare de poulpe acidulé</h5>
-						<p class="choice__side">Aux zestes d'orange</p>
-						<p class="choice__price">25€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="menu">
+				<div class="menu__restaurant">
+					<h1 class="menu__heading">À la française</h1>
+					<button class="menu__like"><i class="far fa-heart"><i class="fas fa-heart menu__full-like"></i></i></button>
 				</div>
 
-				<div class="choice choice--2">
-					<div class="choice__description">
-						<h5 class="choice__heading">Velouté de légumes d'antan</h5>
-						<p class="choice__side">Carotte, panais, topinambour</p>
-						<p class="choice__price">35€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Entrées</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--1">
+						<div class="choice__description">
+							<h5 class="choice__heading">Tartare de poulpe acidulé</h5>
+							<p class="choice__side">Aux zestes d'orange</p>
+							<p class="choice__price">25€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--2">
+						<div class="choice__description">
+							<h5 class="choice__heading">Velouté de légumes d'antan</h5>
+							<p class="choice__side">Carotte, panais, topinambour</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--3">
+						<div class="choice__description">
+							<h5 class="choice__heading">Soupe à l'oignon</h5>
+							<p class="choice__side">Revisitée</p>
+							<p class="choice__price">20€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
 
-				<div class="choice choice--3">
-					<div class="choice__description">
-						<h5 class="choice__heading">Soupe à l'oignon</h5>
-						<p class="choice__side">Revisitée</p>
-						<p class="choice__price">20€</p>
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Plats</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--4">
+						<div class="choice__description">
+							<h5 class="choice__heading">Coquilles Saint-Jacques</h5>
+							<p class="choice__side">Accompagnées d'une purée de panais</p>
+							<p class="choice__price">40€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+					<div class="choice choice--5">
+						<div class="choice__description">
+							<h5 class="choice__heading">Magret de canard</h5>
+							<p class="choice__side">Et parmentier de pommes de terre</p>
+							<p class="choice__price">35€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--6">
+						<div class="choice__description">
+							<h5 class="choice__heading">Pigeonneau d’Ille-et-Vilaine</h5>
+							<p class="choice__side">Sur son lit de gnocchis aux légumes</p>
+							<p class="choice__price">44€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
 				</div>
+
+				<div class="menu__part">
+					<h4 class="menu__subtitle">Desserts</h4>
+					<div class="menu__green-line"></div>
+
+					<div class="choice choice--7">
+						<div class="choice__description">
+							<h5 class="choice__heading">Pétales de violettes glacés</h5>
+							<p class="choice__side">Et purée de noisettes</p>
+							<p class="choice__price">18€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--8">
+						<div class="choice__description">
+							<h5 class="choice__heading">Fondant au chocolat</h5>
+							<p class="choice__side">Revisité</p>
+							<p class="choice__price">22€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+
+					<div class="choice choice--9">
+						<div class="choice__description">
+							<h5 class="choice__heading">Millefeuille croustillant</h5>
+							<p class="choice__side">Myrtilles et pâte d’amande</p>
+							<p class="choice__price">23€</p>
+						</div>
+						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+					</div>
+				</div>
+					
+				<button class="menu__command">Commander</button>
 			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Plats</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--4">
-					<div class="choice__description">
-						<h5 class="choice__heading">Coquilles Saint-Jacques</h5>
-						<p class="choice__side">Accompagnées d'une purée de panais</p>
-						<p class="choice__price">40€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--5">
-					<div class="choice__description">
-						<h5 class="choice__heading">Magret de canard</h5>
-						<p class="choice__side">Et parmentier de pommes de terre</p>
-						<p class="choice__price">35€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--6">
-					<div class="choice__description">
-						<h5 class="choice__heading">Pigeonneau d’Ille-et-Vilaine</h5>
-						<p class="choice__side">Sur son lit de gnocchis aux légumes</p>
-						<p class="choice__price">44€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-
-			<div class="menu__part">
-				<h4 class="menu__subtitle">Desserts</h4>
-				<div class="menu__green-line"></div>
-
-				<div class="choice choice--7">
-					<div class="choice__description">
-						<h5 class="choice__heading">Pétales de violettes glacés</h5>
-						<p class="choice__side">Et purée de noisettes</p>
-						<p class="choice__price">18€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--8">
-					<div class="choice__description">
-						<h5 class="choice__heading">Fondant au chocolat</h5>
-						<p class="choice__side">Revisité</p>
-						<p class="choice__price">22€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div class="choice choice--9">
-					<div class="choice__description">
-						<h5 class="choice__heading">Millefeuille croustillant</h5>
-						<p class="choice__side">Myrtilles et pâte d’amande</p>
-						<p class="choice__price">23€</p>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-				</div>
-			</div>
-				
-			<button class="menu__command">Commander</button>
 
 		</section>
 
