--- a/Menu1.html
+++ b/Menu1.html
@@ -33,7 +33,9 @@
 			<div class="menu">
 				<div class="menu__restaurant">
 					<h1 class="menu__heading">La palette du goût</h1>
-					<button class="menu__like"><i class="far fa-heart"><i class="fas fa-heart menu__full-like"></i></i></button>
+					<i class="far fa-heart menu__like">
+						<div class="menu__full-like"><i class="fas fa-heart"></i></div>
+					</i>
 				</div>
 
 				<div class="menu__part">
